# bazel-contrib

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  NOTICE.txt  README.md
.github/workflows/: bazel.yml  registries.yml
dcp/modules/bazel-contrib-lint/2025.0.0-SNAPSHOT/overlay/: MODULE.bazel
dcp/modules/besu/: metadata.json
dcp/modules/besu-contrib/: metadata.json
dcp/modules/besu-contrib/2025.0.0-SNAPSHOT/: source.json
dcp/modules/besu-contrib/8ffd4c90bf8778dc29d326a710d029366226f870/: MODULE.bazel  source.json
dcp/modules/besu-contrib/8ffd4c90bf8778dc29d326a710d029366226f870/patches/: module_dot_bazel.patch
dcp/modules/besu/23.10.0/: source.json
dcp/modules/besu/23.10.0/overlay/: MODULE.bazel  defs.bzl  version.patch
dcp/modules/besu/23.10.3-hotfix/: MODULE.bazel  source.json
dcp/modules/besu/23.10.3-hotfix/overlay/: BUILD.bazel  defs.bzl
dcp/modules/besu/24.10.0/: MODULE.bazel
dcp/modules/besu/24.10.0/overlay/: MODULE.bazel  version.patch
dcp/modules/dagger/: metadata.json
dcp/modules/dagger/2.45/: source.json
dcp/modules/dagger/2.45/overlay/: .bazelignore  BUILD.bazel  MODULE.bazel
dcp/modules/dagger/2.52/: MODULE.bazel  source.json
dcp/modules/dagger/2.52/overlay/: BUILD.bazel  MODULE.bazel
dcp/modules/immutables/: metadata.json
dcp/modules/immutables/2.10.1/overlay/: BUILD.bazel  defs.bzl
dcp/modules/immutables/2.9.3/: MODULE.bazel  source.json
registries/dcp/modules/bazel-contrib-lint/: metadata.json
registries/dcp/modules/besu/: metadata.json
tools/format/: BUILD.bazel
(+21 files in other folders)
